<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.project.udacity.popularmoviesstage2.ui.DetailActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp">
                <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/imageBackground"
                    app:layout_collapseMode="parallax"
                    />
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_gravity="bottom"
                />
            </FrameLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="pin"
                android:elevation="8dp"
                android:layout_gravity="top"
                android:gravity="top"
                >
                <TextView
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head"
                    />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/poster_path"
                android:layout_marginTop="15dp"
                android:layout_width="160dp"
                android:layout_height="208dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginLeft="16dp"
                android:elevation="4dp"
                />
            <TextView
                android:id="@+id/user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/user_rating"
                android:fontFamily="sans-serif"
                android:layout_marginTop="64dp"
                android:layout_marginLeft="192dp"
                />
            <TextView
                android:id="@+id/user_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="68dp"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/user_rating" />
            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="192dp"
                android:fontFamily="sans-serif"
                android:text="@string/release_date"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@id/user_rating" />
            <TextView
                android:id="@+id/release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:singleLine="true"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="36dp"
                android:layout_toRightOf="@id/release_date"
                android:layout_below="@id/user_rating"/>
            <LinearLayout
                android:id="@+id/linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:padding="16dp"
                android:layout_below="@+id/release_date">
                <TextView
                    android:id="@+id/overview_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_synopsis"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />
                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="17sp" />
            </LinearLayout>
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/line"
                android:layout_below="@+id/linear"/>
            <TextView
                android:id="@+id/trailer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:paddingLeft="16dp"
                android:text="@string/trailer"
                style="@style/txtStyle"
            />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_below="@+id/trailer_txt">
            </android.support.v7.widget.RecyclerView>
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/line"
                android:layout_below="@+id/movies_recycler_view"
            />
            <TextView
                android:id="@+id/review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:paddingLeft="16dp"
                android:text="@string/reviews"
                android:layout_below="@id/view2"
                />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp"
                    android:layout_below="@id/review"
                    />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginRight="32dp"
        app:layout_anchor="@id/appBar"
        android:clickable="true"
        app:elevation="4dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/ic_thumb_up_white_24dp"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>
